--- a/_.config.yml
+++ b/_.config.yml
@@ -1,6 +1,6 @@
-theme: jekyll-theme-minimal
-plugins:
-  - jekyll-relative-links
+#theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+  - jekyll-remote-theme
 relative_links:
   enabled: true
   collections: true
