--- a/_.config.yml
+++ b/_.config.yml
@@ -1,4 +1,4 @@
-#theme: jekyll-theme-minimal
+theme: jekyll-remote-theme
 remote_theme: pages-themes/cayman@v0.2.0
   - jekyll-remote-theme
 relative_links:
