--- a/_.config.yml
+++ b/_.config.yml
@@ -1,15 +1,19 @@
-theme: jekyll-remote-theme
+title: "Sentinelfox Knowledge Hub"
+description: "Internal knowledge base for our team"
 remote_theme: pages-themes/cayman@v0.2.0
+
+plugins:
   - jekyll-remote-theme
+
 relative_links:
   enabled: true
   collections: true
+
 include:
   - CONTRIBUTING.md
   - README.md
   - LICENSE.md
   - COPYING.md
   - CODE_OF_CONDUCT.md
-  - CONTRIBUTING.md
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
