--- a/_.config.yml
+++ b/_.config.yml
@@ -1,7 +1,7 @@
 title: "Sentinelfox Knowledge Hub"
 description: "Internal knowledge base for our team"
 remote_theme: pages-themes/cayman@v0.2.0
-
+theme: jekyll-theme-merlot
 plugins:
   - jekyll-remote-theme
 
