--- a/_.config.yml
+++ b/_.config.yml
@@ -1,6 +1,6 @@
 title: "Sentinelfox Knowledge Hub"
 description: "Internal knowledge base for our team"
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/merlot@v0.2.0
 theme: jekyll-theme-merlot
 plugins:
   - jekyll-remote-theme
