--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: "Sentinelfox Knowledge Hub"
 description: "Internal knowledge base for our team"
+url: "https://sentinelfoxinc.github.io"
+baseurl: "/knowledge-base"
+
 remote_theme: pages-themes/cayman@v0.2.0
 
 plugins:
