--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: "Sentinelfox Knowledge Hub"
-description: "Internal knowledge base for our team"
+description: "Internal documentation portal for the Sentinelfox team"
 url: "https://sentinelfoxinc.github.io"
 baseurl: "/knowledge-base"
 
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/dinky@v0.2.0
 
 plugins:
   - jekyll-remote-theme
@@ -20,3 +20,11 @@ include:
   - CODE_OF_CONDUCT.md
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
