--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,5 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
 
-relative_links:
-  enabled: true
-  collections: true
-
-include:
-  - CONTRIBUTING.md
-  - README.md
-  - LICENSE.md
-  - COPYING.md
-  - CODE_OF_CONDUCT.md
-  - ISSUE_TEMPLATE.md
-  - PULL_REQUEST_TEMPLATE.md
+markdown: kramdown
+highlighter: rouge
