--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,18 @@
 title: "Sentinelfox Knowledge Hub"
 description: "Internal knowledge base for our team"
-url: "https://sentinelfoxinc.github.io"
-baseurl: "/knowledge-base"
-
 remote_theme: pages-themes/minimal@v0.2.0
-
 plugins:
   - jekyll-remote-theme
 
-relative_links:
-  enabled: true
-  collections: true
-
 include:
-  - CONTRIBUTING.md
-  - README.md
-  - LICENSE.md
-  - COPYING.md
-  - CODE_OF_CONDUCT.md
-  - ISSUE_TEMPLATE.md
-  - PULL_REQUEST_TEMPLATE.md
+  - _layouts
+  - _includes
+  - assets
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: custom
