--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,10 @@
-title: "Sentinelfox Knowledge Hub"
-description: "Internal knowledge base for our team"
-url: "https://sentinelfoxinc.github.io"
-baseurl: "/knowledge-base"
+theme: jekyll-theme-minimal
+title: Your Knowledge Base
+description: Internal team knowledge documentation
 
-remote_theme: pages-themes/minimal@v0.2.0
-
-plugins:
-  - jekyll-remote-theme
-
-relative_links:
-  enabled: true
-  collections: true
-
-include:
-  - CONTRIBUTING.md
-  - README.md
-  - LICENSE.md
-  - COPYING.md
-  - CODE_OF_CONDUCT.md
-  - ISSUE_TEMPLATE.md
-  - PULL_REQUEST_TEMPLATE.md
+# Optional: Set default layout
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default-with-sidebar"
